--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,8 @@ apply plugin: 'com.android.application'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation 'androidx.core:core:1.13.1'
+    implementation 'com.zaxxer:HikariCP:2.7.9'
+    implementation 'mysql:mysql-connector-java:5.1.49'
 }
 
 android {
